# binancie-bot

./: .env.example  Cargo.toml  README.md
src/: main.rs
src/callback/: mod.rs
src/handler/: mod.rs
src/handler/binance/: price.rs  register.rs
src/handler/misc/: random.rs  tell.rs
src/message/: mod.rs
src/message/binance/: avg_price.rs  mod.rs  price.rs
src/message/misc/: default.rs  lowercase.rs  mod.rs  shuffle.rs  tell.rs
