[package]
name = "binancie-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
teloxide = { version = "0.7", features = ["frunk", "macros", "auto-send"] } 
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
rand = "0.8.4"
rust-crypto = "0.2.36"